2003-07-10  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/boot.h: Fix doxygen.

2003-06-20  Eric B. Weddington  <eric@ecentral.com>

	* include/string.h: Add declarations of new functions from Reiner.
	* include/avr/pgmspace.h: ditto.

2003-06-20  Eric B. Weddington  <eric@ecentral.com>

	* libc/misc/itoa.S: Fix for bug #4010 from Reiner Patommel.
	* libc/misc/ltoa.S: ditto
	* libc/misc/ultoa.S: ditto
	* libc/misc/utoa.S: ditto
	* include/stdlib.h: Update doxygen for these functions.

2003-06-20  Eric B. Weddington  <eric@ecentral.com>

	* libc/stdlib/atoi.S: Fix bug with extra text.

2003-06-19  Eric B. Weddington  <eric@ecentral.com>

	New string functions from Reiner Patommel.
	* libc/string/strlcat.S: Add file.
	* libc/string/strlcpy.S: Add file.
	* libc/string/strsep.S: Add file.
	* libc/string/strtok_r.S: Add file.
	* libc/string/Makefile.am: Modify for new functions.
	* libc/pmstring/strlcat_P.S: Add file.
	* libc/pmstring/strlcpy_P.S: Add file.
	* libc/pmstring/strncat_P.S: Add file.
	* libc/pmstring/Makefile.am: Modify for new functions.
	* doc/TODO: Remove item about optimize strlcpy, strlcat.
	* NEWS: Note about new functions.

2003-06-18  Eric B. Weddington  <eric@ecentral.com>

	* libc/stdlib/atol.S: Fix for Bug #3576, by Reiner Patommel.

2003-06-18  Eric B. Weddington  <eric@ecentral.com>

	* libc/stdlib/atoi.S: Fix for Bug #3575, by Reiner Patommel.

2003-06-17  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/interrupt.h: Fix for bug #3508.

2003-06-17  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/pgmspace.h: Revert volatile on macros, fix macros to
	specify which registers are used.

2003-06-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdlib/strtoul.c: fix broken unsigned handling.

2003-06-13  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/iom169.h: Add missing EECR bit defines.

2003-06-10  Eric B. Weddington  <eric@ecentral.com>

	* include/avr/sfr_defs.h: Add more comments on the return value of